--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "ember-data": "~2.14.9",
     "ember-django-adapter": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
+    "ember-getowner-polyfill": "^2.0.1",
     "ember-idx-button": "^0.1.3",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.14.1",
+    "ember-truth-helpers": "^1.3.0",
     "ember-welcome-page": "^3.0.0",
     "loader.js": "^4.2.3"
   },
