--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.4.3",
     "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-moment-shim": "^3.5.0",
     "ember-cli-qunit": "^4.0.0",
     "ember-cli-sass": "^7.0.0",
     "ember-cli-shims": "^1.1.0",
@@ -39,11 +40,13 @@
     "ember-getowner-polyfill": "^2.0.1",
     "ember-idx-button": "^0.1.3",
     "ember-load-initializers": "^1.0.0",
+    "ember-moment": "^7.4.1",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.14.1",
     "ember-truth-helpers": "^1.3.0",
     "ember-welcome-page": "^3.0.0",
-    "loader.js": "^4.2.3"
+    "loader.js": "^4.2.3",
+    "moment": "^2.18.1"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
